--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <p class="resume-description">
                 Download my comprehensive portfolio to learn more about my professional journey, detailed project experiences, and technical expertise in Power BI development and data analytics. The document includes in-depth case studies, client testimonials, and quantified achievements from my career.
             </p>
-            <a href="Mohammad_Faizan_Khan_Portfolio.pdf.pdf.pdf" class="resume-download" download="Mohammad_Faizan_Khan_Portfolio.pdf" target="_blank">
+           <a href="Mohammad_Faizan_Khan_Portfolio.pdf.pdf.pdf" class="resume-download" target="_blank"> View Portfolio PDF </a>
                 Download Portfolio PDF
             </a>
         </div>
@@ -275,3 +275,4 @@
     </script>
 </body>
 </html>
+
