--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
             <h2>Key Projects</h2>
 
             <article class="project">
-                <h3>Inventory & Warehouse Executive Dashboard - IBM(Pune)</h3>
+                <h3> US Bank Loan Analytics Dashboard <h3>
                 <p class="date">October 2025 - Present</p>
-                <p>Cigna Inventory & Warehouse - Global health services organization project involving migration and consolidation of data from various global systems.</p>
+                <p>Fiserv offers bank data analysis via its core platforms and tools (like BankAnalyst). This allows banks to derive actionable insights for: Strategic Planning (market growth, branch optimization) Risk Management (fraud & credit) Customer Engagement & predictive modeling Operational Efficiency.</p>
                 <ul>
                     <li>Implemented centralized data warehouse solution for improved business data analysis</li>
                     <li>Created interactive visualizations with drill-down capabilities</li>
@@ -123,9 +123,9 @@
             </article>
 
             <article class="project">
-                <h3>Supply Chain Management - Bridgestone</h3>
+                <h3>Shopify E-commerce-Analysis </h3>
                 <p class="date">May 2023 - December 2024</p>
-                <p>Supply chain analytics project for one of the world's leading tire manufacturers.</p>
+                <p>Shopify e-commerce analysis involves tracking key metrics like sales, conversion rate, Average Order Value (AOV), and customer behavior (traffic, popular products, retention) via the built-in analytics and reports.</p>
                 <ul>
                     <li>Optimized supply chain visibility across inventory and warehousing</li>
                     <li>Implemented drill-down and drill-through reports with navigation buttons</li>
@@ -137,9 +137,9 @@
             </article>
 
             <article class="project">
-                <h3>Sales Analysis - IPORTMAN</h3>
+                <h3>BMW Carsales Analysis</h3>
                 <p class="date">April 2021 - April 2022</p>
-                <p>IPM Analysis Management for web-based port operations solution.</p>
+                <p>BMW's sales success is driven by its strong premium segment positioning and a growing emphasis on electrification. Global deliveries are supported by popular models like SUVs (X family) and high-end luxury/performance cars (M models). The company is seeing significant, multi-digit growth in its fully-electric vehicle (BEV) sales worldwide.</p>
                 <ul>
                     <li>Created technical documentation and implementation plans</li>
                     <li>Developed interactive dashboards with drill-through capabilities</li>
@@ -275,3 +275,4 @@
     </script>
 </body>
 </html>
+
