--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
       <h2 id="projects-heading">Key Projects</h2>
 
       <article class="project">
-        <h3>US Bank Loan Analytics Dashboard</h3>
+    <h3>
+        <img src="images/projects/usbank.png" alt="US Bank Logo" class="project-logo" loading="lazy" />
+            US Bank – Loan Analytics Dashboard </h3>  
         <p class="date">October 2025 - Present</p>
         <p>Designed analytics solutions for strategic planning, fraud risk, and customer engagement insights using Fiserv tools.</p>
         <ul>
@@ -138,7 +140,8 @@
       </article>
 
       <article class="project">
-        <h3>Shopify E-commerce Analysis</h3>
+        <h3>   
+         <img src="images/projects/shopify.png" alt="Shopify Logo" class="project-logo" loading="lazy" />   Shopify – E-commerce Performance Analysis </h3>
         <p class="date">May 2023 - Dec 2024</p>
         <p>Monitored Shopify performance metrics (AOV, conversion rate, retention) through dynamic reports.</p>
         <ul>
@@ -148,7 +151,8 @@
       </article>
 
       <article class="project">
-        <h3>BMW Car Sales Analysis</h3>
+       <h3>
+         <img src="images/projects/bmw.png" alt="BMW Logo" class="project-logo" loading="lazy" />   BMW – Global Car Sales Dashboard </h3>
         <p class="date">Apr 2021 - Apr 2022</p>
         <p>Delivered dashboards tracking electric vehicle growth, global trends, and dealership KPIs.</p>
         <ul>
@@ -166,3 +170,4 @@
         <h3>Winspectrum Certified: Power BI Data Analyst Associate</h3>
         <p class="date">Nov 2021 - Present</p>
         <p>Certified in end-to-end Power BI development, including ETL, modeling, visualization, and
+
