--- a/index.html
+++ b/index.html
@@ -165,13 +165,124 @@
     <!-- Certifications -->
     <section id="certifications" class="section" aria-labelledby="certifications-heading">
       <h2 id="certifications-heading">Certifications & Education</h2>
-
       <article class="job">
-        <h3>Winspectrum Certified: Power BI Data Analyst Associate</h3>
-        <p class="date">Nov 2021 - Present</p>
-        <p>Certified in end-to-end Power BI development, including ETL, modeling, visualization, and
+                <h3>Winspectrum Certified: Power BI Data Analyst Associate</h3>
+                <p class="date">November 2021 - Present</p>
+                <p>Demonstrated expertise in data preparation, modeling, visualization, analysis, and deployment of Power BI solutions.</p>
+            </article>
+
+            <article class="job">
+                <h3>Bachelor's Degree from Rashtrasant Tukadoji Maharaj Nagpur University</h3>
+                <p class="date">Completed January 2022</p>
+                <p>Strong foundation in database management, and analytical thinking with focus on data structures and algorithms.</p>
+            </article>
+        </section>
+    </main>
+
+    <section class="resume-section">
+        <div class="resume-content">
+            <h2>Download Portfolio</h2>
+            <p class="resume-description">
+                Download my comprehensive portfolio to learn more about my professional journey, detailed project experiences, and technical expertise in Power BI development and data analytics. The document includes in-depth case studies, client testimonials, and quantified achievements from my career.
+            </p>
+            <a href="Mohammad_Faizan_Khan_Portfolio.pdf.pdf.pdf" class="resume-download" target="_blank">
+                View Portfolio PDF
+            </a>
+        </div>
+    </section>
 
 
+    <footer>
+        <div class="footer-contacts">
+            <div class="contact-item">
+                <img src="images/email.svg" alt="Email" class="icon-inline" />
+                <span class="contact-label">EMAIL:</span>
+                <a href="mailto:faizankhanofficial71@gmail.com">faizankhanofficial71@gmail.com</a>
+            </div>
+            <div class="contact-item">
+                <img src="images/linkedin.svg" alt="LinkedIn" class="icon-inline" />
+                <span class="contact-label">LINKEDIN:</span>
+                <a href="https://www.linkedin.com/in/faizan-khan" target="_blank" rel="noopener">linkedin.com/in/faizan-khan</a>
+            </div>
+            <div class="contact-item">
+                <img src="images/github.svg" alt="GitHub" class="icon-inline" />
+                <span class="contact-label">GITHUB:</span>
+                <a href="https://github.com/FaizanKhan71" target="_blank" rel="noopener">github.com/FaizanKhan71</a>
+            </div>
+        </div>
+        <p class="copyright-text">
+            &copy; 2024 Mohammad Faizan Khan. Crafted with passion for data-driven insights.
+        </p>
+    </footer>
+    
+    <button id="backToTop" aria-label="Back to top" title="Scroll to top">
+        <svg class="scroll-arrow" viewBox="0 0 24 24" width="24" height="24">
+            <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z" transform="rotate(-90 12 12)"/>
+        </svg>
+    </button>
 
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Mohammad Faizan Khan",
+        "jobTitle": "Power BI Developer",
+        "description": "Experienced Power BI Developer and Data Analyst",
+        "url": "#",
+        "sameAs": [
+            "https://www.linkedin.com/in/faizan-khan",
+            "https://github.com/FaizanKhan71"
+        ],
+        "knowsAbout": ["Power BI", "Data Analysis", "DAX", "Power Query", "SQL", "Data Visualization"]
+    }
+    </script>
 
+        <script>
+        // Canvas background for header
+        const canvas = document.getElementById('header-canvas');
+        if (canvas) {
+            function resizeCanvas() {
+                canvas.width = canvas.offsetWidth = canvas.parentElement.offsetWidth;
+                canvas.height = canvas.offsetHeight = canvas.parentElement.offsetHeight;
+            }
+            resizeCanvas();
+            window.addEventListener('resize', resizeCanvas);
+            const ctx = canvas.getContext('2d');
+            // Simple gradient background
+            function drawHeaderBg() {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                const grad = ctx.createLinearGradient(0, 0, canvas.width, canvas.height);
+                grad.addColorStop(0, '#d1bd06');
+                grad.addColorStop(1, '#fffbe6');
+                ctx.fillStyle = grad;
+                ctx.fillRect(0, 0, canvas.width, canvas.height);
+            }
+            drawHeaderBg();
+            window.addEventListener('resize', drawHeaderBg);
+        }
+    // Smooth scroll for anchor links
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
+            });
+        });
+    });
 
+    // Back to top button
+    const backToTop = document.getElementById('backToTop');
+    window.addEventListener('scroll', () => {
+        if (window.scrollY > 300) {
+            backToTop.style.display = 'block';
+        } else {
+            backToTop.style.display = 'none';
+        }
+    });
+    backToTop.addEventListener('click', () => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+    </script>
+</body>
+</html>
