--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <article class="project">
     <h3>
-        <img src="images/usbank.png" alt="US Bank Logo" class="project-logo" loading="lazy"  width="50" height="50"  />
+        <img src="images/usbank.png" alt="US Bank Logo" class="project-logo" loading="lazy" />
             US Bank – Intelligent Loan Analytics Platform </h3>  
         <p class="date">October 2025 - Present</p>
         <p>Designed analytics solutions for strategic planning, fraud risk, and customer engagement insights using Fiserv tools.</p>
@@ -141,7 +141,7 @@
 
       <article class="project">
         <h3>   
-         <img src="images/shopify.png" alt="Shopify Logo" class="project-logo" loading="lazy"  width="50" height="50"  />Shopify – Dynamic E-Commerce KPI Dashboard</h3>
+         <img src="images/shopify.png" alt="Shopify Logo" class="project-logo" loading="lazy" />Shopify – Dynamic E-Commerce KPI Dashboard</h3>
         <p class="date">May 2023 - Dec 2024</p>
         <p>Monitored Shopify performance metrics (AOV, conversion rate, retention) through dynamic reports.</p>
         <ul>
@@ -152,7 +152,7 @@
 
       <article class="project">
        <h3>
-         <img src="images/bmw.png" alt="BMW Logo" class="project-logo" loading="lazy" width="50" height="50" />BMW – Global Sales & EV Performance Insights</h3>
+         <img src="images/bmw.png" alt="BMW Logo" class="project-logo" BMW – Global Sales & EV Performance Insights</h3>
         <p class="date">Apr 2021 - Apr 2022</p>
         <p>Delivered dashboards tracking electric vehicle growth, global trends, and dealership KPIs.</p>
         <ul>
@@ -286,3 +286,4 @@
     </script>
 </body>
 </html>
+
