--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
       <article class="project">
        <h3>
-         <img src="images/bmw.png" alt="BMW Logo" class="project-logo" BMW – Global Sales & EV Performance Insights</h3>
+         <img src="images/bmw.png" alt="BMW Logo" class="project-logo" loading="lazy" /> BMW – Global Sales & EV Performance Insights</h3>
         <p class="date">Apr 2021 - Apr 2022</p>
         <p>Delivered dashboards tracking electric vehicle growth, global trends, and dealership KPIs.</p>
         <ul>
@@ -286,4 +286,5 @@
     </script>
 </body>
 </html>
+
 
