--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
       <h2 id="projects-heading">Key Projects</h2>
 
       <article class="project">
-    <h3>
+    <h3>  
+        <a href="https://faizankhan71.github.io/US_Bank-Intelligent-Loan-Analytics-Platform/" target="_blank">
         <img src="images/usbank.png" alt="US Bank Logo" class="project-logo" loading="lazy" />
             US Bank – Intelligent Loan Analytics Platform </h3>  
         <p class="date">October 2025 - Present</p>
@@ -286,5 +287,6 @@
     </script>
 </body>
 </html>
+
 
 
