--- a/index.html
+++ b/index.html
@@ -127,10 +127,12 @@
       <h2 id="projects-heading">Key Projects</h2>
 
       <article class="project">
-    <h3>  
-        <a href="https://faizankhan71.github.io/US_Bank-Intelligent-Loan-Analytics-Platform/" target="_blank">
-        <img src="images/usbank.png" alt="US Bank Logo" class="project-logo" loading="lazy" />
-            US Bank – Intelligent Loan Analytics Platform </h3>  
+        <h3>
+          <a href="https://faizankhan71.github.io/US_Bank-Intelligent-Loan-Analytics-Platform/" target="_blank">
+            <img src="images/usbank.png" alt="US Bank Logo" class="project-logo" loading="lazy" />
+            US Bank – Intelligent Loan Analytics Platform
+          </a>
+        </h3>  
         <p class="date">October 2025 - Present</p>
         <p>Designed analytics solutions for strategic planning, fraud risk, and customer engagement insights using Fiserv tools.</p>
         <ul>
@@ -141,8 +143,12 @@
       </article>
 
       <article class="project">
-        <h3>   
-         <img src="images/shopify.png" alt="Shopify Logo" class="project-logo" loading="lazy" />Shopify – Dynamic E-Commerce KPI Dashboard</h3>
+        <h3>
+          <a href="#" target="_blank">
+            <img src="images/shopify.png" alt="Shopify Logo" class="project-logo" loading="lazy" />
+            Shopify – Dynamic E-Commerce KPI Dashboard
+          </a>
+        </h3>
         <p class="date">May 2023 - Dec 2024</p>
         <p>Monitored Shopify performance metrics (AOV, conversion rate, retention) through dynamic reports.</p>
         <ul>
@@ -152,8 +158,12 @@
       </article>
 
       <article class="project">
-       <h3>
-         <img src="images/bmw.png" alt="BMW Logo" class="project-logo" loading="lazy" /> BMW – Global Sales & EV Performance Insights</h3>
+        <h3>
+          <a href="#" target="_blank">
+            <img src="images/bmw.png" alt="BMW Logo" class="project-logo" loading="lazy" />
+            BMW – Global Sales & EV Performance Insights
+          </a>
+        </h3>
         <p class="date">Apr 2021 - Apr 2022</p>
         <p>Delivered dashboards tracking electric vehicle growth, global trends, and dealership KPIs.</p>
         <ul>
@@ -195,21 +205,18 @@
 
     <footer>
         <div class="footer-contacts">
-            <div class="contact-item">
+            <span class="contact-item">
                 <img src="images/email.svg" alt="Email" class="icon-inline" />
-                <span class="contact-label">EMAIL:</span>
-                <a href="mailto:faizankhanofficial71@gmail.com">faizankhanofficial71@gmail.com</a>
-            </div>
-            <div class="contact-item">
+                EMAIL: <a href="mailto:faizankhanofficial71@gmail.com">faizankhanofficial71@gmail.com</a>
+            </span>
+            <span class="contact-item">
                 <img src="images/linkedin.svg" alt="LinkedIn" class="icon-inline" />
-                <span class="contact-label">LINKEDIN:</span>
-                <a href="https://www.linkedin.com/in/faizan-khan" target="_blank" rel="noopener">linkedin.com/in/faizan-khan</a>
-            </div>
-            <div class="contact-item">
+                LINKEDIN: <a href="https://www.linkedin.com/in/faizan-khan" target="_blank" rel="noopener">linkedin.com/in/faizan-khan</a>
+            </span>
+            <span class="contact-item">
                 <img src="images/github.svg" alt="GitHub" class="icon-inline" />
-                <span class="contact-label">GITHUB:</span>
-                <a href="https://github.com/FaizanKhan71" target="_blank" rel="noopener">github.com/FaizanKhan71</a>
-            </div>
+                GITHUB: <a href="https://github.com/FaizanKhan71" target="_blank" rel="noopener">github.com/FaizanKhan71</a>
+            </span>
         </div>
         <p class="copyright-text">
             &copy; 2024 Mohammad Faizan Khan. Crafted with passion for data-driven insights.
