--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
       <article class="project">
         <h3>
-          <a href="#" target="_blank">
+          <a href="https://faizankhan71.github.io/BMW_Global_Sales_and_EV_Performance_Insights/" target="_blank">
             <img src="images/bmw.png" alt="BMW Logo" class="project-logo" loading="lazy" />
             BMW – Global Sales & EV Performance Insights
           </a>
@@ -294,6 +294,7 @@
     </script>
 </body>
 </html>
+
 
 
 
