--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
       <article class="project">
         <h3>
-          <a href="#" target="_blank">
+          <a href="https://faizankhan71.github.io/Shopify_Dynamic_E_Commerce_KPI_Dashboard/" target="_blank">
             <img src="images/shopify.png" alt="Shopify Logo" class="project-logo" loading="lazy" />
             Shopify – Dynamic E-Commerce KPI Dashboard
           </a>
@@ -294,6 +294,7 @@
     </script>
 </body>
 </html>
+
 
 
 
