--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </span>
             <span class="contact-item">
                 <img src="images/linkedin.svg" alt="LinkedIn" class="icon-inline" />
-                LINKEDIN: <a href="www.linkedin.com/in/faizankhanofficial71" rel="noopener">linkedin.com/in/faizan-khan</a>
+                LINKEDIN: <a href="www.linkedin.com/in/faizankhanofficial71" rel="noopener">linkedin.com/in/faizankhanofficial71/</a>
             </span>
             <span class="contact-item">
                 <img src="images/github.svg" alt="GitHub" class="icon-inline" />
@@ -434,6 +434,7 @@
     </script>
 </body>
 </html>
+
 
 
 
