--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </span>
             <span class="contact-item">
                 <img src="images/linkedin.svg" alt="LinkedIn" class="icon-inline" />
-                LINKEDIN: <a href="www.linkedin.com/in/faizankhanofficial71" rel="noopener">linkedin.com/in/faizankhanofficial71/</a>
+                LINKEDIN: <a href="https://www.linkedin.com/in/faizankhanofficial71/" rel="noopener">faizankhanofficial71/</a>
             </span>
             <span class="contact-item">
                 <img src="images/github.svg" alt="GitHub" class="icon-inline" />
@@ -277,7 +277,7 @@
         "description": "Experienced Power BI Developer and Data Analyst",
         "url": "#",
         "sameAs": [
-            "https://www.linkedin.com/in/faizan-khan",
+            "https://www.linkedin.com/in/faizankhanofficial71/",
             "https://github.com/FaizanKhan71"
         ],
         "knowsAbout": ["Power BI", "Data Analysis", "DAX", "Power Query", "SQL", "Data Visualization"]
@@ -434,6 +434,7 @@
     </script>
 </body>
 </html>
+
 
 
 
