--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <h2 id="experience-heading">Professional Experience</h2>
 
       <article class="job">
-        <h3>Power BI Developer – Winspectrum Business Solutions</h3>
+        <h3>Analyst – HCLTech</h3>
         <p class="date">May 2022 – Present</p>
         <ul>
           <li>Increased operational efficiency by 35% through automated dashboards.</li>
@@ -136,8 +136,8 @@
       </article>
 
       <article class="job">
-        <h3>Data Analyst – Winspectrum Business Solutions</h3>
-        <p class="date">Nov 2021 – Apr 2022</p>
+        <h3>Quality Engineer –  Mahindra & Mahindra Limited [Automotive and Farm Equipment Business]</h3>
+        <p class="date">Mar 2021 – Mar 2022</p>
         <ul>
           <li>Delivered 15+ automated reports, saving $100K annually.</li>
           <li>Boosted data accuracy by 45% with ETL and validation enhancements.</li>
@@ -203,8 +203,8 @@
     <section id="certifications" class="section scale-in" aria-labelledby="certifications-heading">
       <h2 id="certifications-heading">Certifications & Education</h2>
       <article class="job">
-                <h3>Winspectrum Certified: Power BI Data Analyst Associate</h3>
-                <p class="date">November 2021 - Present</p>
+                <h3>Diploma from Maharashtra State Board of Technical Education</h3>
+                <p class="date">completed on 2018 </p>
                 <p>Demonstrated expertise in data preparation, modeling, visualization, analysis, and deployment of Power BI solutions.</p>
             </article>
 
@@ -434,6 +434,7 @@
     </script>
 </body>
 </html>
+
 
 
 
