--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         document.querySelector('.resume-download').addEventListener('click', function(e) {
               e.preventDefault();
               const password = prompt("Enter password to view the portfolio PDF:");
-              if (password === "Faizan123") { // <-- change this password
+              if (P === "Faizan123") { // <-- p
                   window.open("Mohammad_Faizan_Khan_Portfolio.pdf.pdf.pdf", "_blank");
               } else if (password !== null) {
                   alert("Incorrect password. Access denied.");
@@ -434,6 +434,7 @@
     </script>
 </body>
 </html>
+
 
 
 
